# claude-somnium

./: .gitattributes  .gitignore  CLAUDE.md  FEATURES.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.claude/skills/python-lint-best-practices/: SKILL.md
.claude/somnium/memory/: 2026-04-09-somnium-project-identity-and-architecture.md  2026-04-09-voyage-api-key-location.md  2026-04-10-mempalace-fully-uninstalled.md  2026-04-10-somnium-github-repo-and-final-state.md
.github/workflows/: ci.yml  e2e.yml  release.yml
docs/: architecture.md  code-search.md  configuration.md  dream-mode.md  releasing.md  skills.md
scripts/: check_file_sizes.py  check_function_sizes.py  lint.sh
somnium/: __init__.py  cli.py  cli_config.py  cli_memory.py  config.py  cost.py  indexer.py  mcp_server.py
somnium/cli/: __init__.py  config.py  costs.py  dream.py  dreams.py  index.py  init.py  memory.py  search.py  status.py  uninstall.py  update.py  version.py
somnium/code/: __init__.py  ast_chunker.py  chunker.py  indexer.py  semantic.py  walker.py
somnium/dream/: __init__.py  agent.py  cli_runner.py  digest.py  gate.py  prompts.py  router.py  runner.py  transcript.py
somnium/embeddings/: __init__.py  base.py  ollama.py  voyage.py
somnium/hooks/: _common.py  install.py  post_tool_use.py  stop.py  user_prompt_submit.py
somnium/storage/: __init__.py  markdown.py  parquet_store.py  scope.py  vector.py
somnium/templates/: config.toml  merge_cache.py  statusline.sh
somnium/templates/commands/: context.md  dream.md  search.md  status.md
tests/: test_ast_chunker.py  test_cli.py  test_cli_config.py  test_cli_costs.py  test_cli_dreams.py  test_cli_index.py  test_cli_init_onboarding.py  test_cli_init_toml_writer.py  test_cli_memory.py  test_cli_search.py  test_cli_status.py  test_cli_update.py  test_code_chunker.py  test_code_indexer.py  test_code_semantic.py  test_cost.py  test_dream_agent.py  test_dream_agent_parse.py  test_dream_cli_runner.py  test_dream_digest.py  test_dream_gate.py  test_dream_gate_llm.py  test_dream_prompts.py  test_dream_router.py  test_dream_runner.py  test_dream_transcript.py  test_embeddings_base.py  test_embeddings_ollama.py  test_embeddings_voyage.py  test_hooks_common.py  test_hooks_install.py  test_hooks_post_tool_use.py  test_hooks_stop.py  test_hooks_user_prompt_submit.py  test_integration_indexer.py  test_markdown_chunking.py  test_mcp_server.py  test_merge_cache.py  test_ollama_integration.py  test_parquet_store.py  (+3 more)
tests/e2e/: conftest.py  test_dream_live.py  test_voyage_live.py
