[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "claude-somnium"
version = "0.2.0"
description = "Second brain, RAG memory and dual code search for Claude Code"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "Somnium contributors" }]
keywords = ["claude", "claude-code", "mcp", "rag", "memory", "second-brain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]

dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "mcp>=1.0",
    "duckdb>=1.1",
    "voyageai>=0.3",
    "python-frontmatter>=1.1",
    "markdown-it-py>=3.0",
    "platformdirs>=4.2",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "ruff>=0.5",
    "pyright>=1.1",
    "vulture>=2.11",
    "pip-audit>=2.7",
]

[project.scripts]
somnium = "somnium.cli:app"
somnium-mcp = "somnium.mcp_server:main"
somnium-hook-post-tool-use = "somnium.hooks.post_tool_use:main"
somnium-hook-stop = "somnium.hooks.stop:main"
somnium-hook-user-prompt-submit = "somnium.hooks.user_prompt_submit:main"
somnium-dream-run = "somnium.dream.cli_runner:main"

[project.urls]
Homepage = "https://github.com/impulse-studio/claude-somnium"
Issues = "https://github.com/impulse-studio/claude-somnium/issues"

[tool.hatch.build.targets.wheel]
packages = ["somnium"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "F", "E", "W", "I", "N", "UP",
    "ANN", "B", "A", "COM", "C4",
    "DTZ", "ISC", "ICN", "PIE", "PT",
    "Q", "RSE", "RET", "SLF", "SIM",
    "TID", "TCH", "ARG", "ERA", "PGH",
    "PL", "TRY", "FLY", "PERF", "FURB",
    "RUF", "S", "PTH",
]
ignore = [
    "E501",     # line length — handled by formatter
    "COM812",   # trailing comma — conflicts with formatter
    "ISC001",   # implicit string concat — conflicts with formatter
    "TRY003",   # long messages in raise — too strict for ValueError/TypeError
    "B008",     # function call in default arg — typer idiom (typer.Option / typer.Argument)
    "ANN401",   # dynamically typed expressions (Any) — needed for generic helpers
    "TID252",   # relative imports — project convention, acceptable within same package
    "PLC0415",  # import outside top-level — intentional lazy imports for CLI startup speed
    "S603",     # subprocess-without-shell-equals-true — we control all commands
    "S607",     # start-process-with-partial-path — we use shutil.which() or known binaries
    "PLW1510",  # subprocess-run-without-check — we check returncode manually
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101", "S105", "S106", "S108", "S311",
    "ANN", "ARG",
    "PLR2004", "PLR0913", "SLF001",
    "TC003", "RUF059", "Q003", "PT011",
    "PERF401", "TRY301", "PIE807", "RUF007", "A002",
    "S608",
]
"__init__.py" = ["F401"]

[tool.ruff.lint.pylint]
max-args = 7
max-returns = 6
max-statements = 50

[tool.ruff.lint.isort]
known-first-party = ["somnium"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnnecessaryTypeIgnoreComment = true
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["somnium"]

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "@overload",
]
